--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
@@ -22,7 +24,7 @@
             well as vital infrastructure such as power supply lines, water sources and roads are all damaged or
             underwater. Many people have been affected by floods for the second time in a month, after severe flooding
             also struck the region in mid-May.
-        </p>
+        </p> <br>
         <a class="link-button" href="##">Donate Now</a>
     </section>
     <section class="donate-update">
@@ -111,7 +113,7 @@
             <p>Their lives depend on your loving donations. If you donate, it will help thousands of displaced people to
                 access food, eudcation, shelter, medicine, nutrition, medical care etc.</p>
             <br>
-            <a class="link-button" href="##">How to contribute</a>
+            <a class="link-button" href="##">How to contribute?</a>
         </div>
         <div>
             <img id="reduced-size" src="images/donation6.jpg" alt="">
@@ -126,8 +128,20 @@
             <p>With your donation you help thousands of people in Bangladesh. We want improve life's condition of the
                 flood affected people in rural villages in Sylhet. </p>
             <br>
-            <a class="link-button" href="##">How to contribute</a>
+            <a class="link-button" href="##">How to contribute?</a>
         </div>
+    </section>
+    <section class="statistics">
+        <Div>
+            <h2>Our Statistics</h2>
+        </Div>
+        <Div class="flexible-container">
+            <ul> <strong>$13,231</strong> collected</ul>
+            <ul> <strong>$14,098</strong> distributed</ul>
+            <ul> <strong>21,451</strong> donors</ul>
+            <ul> <strong>105</strong> countries</ul>
+        </Div>
+
     </section>
     <section class="donate-update">
         <div>
@@ -139,10 +153,15 @@
             <button>subscribe</button>
         </div>
     </section> <br>
+
 </body>
 <footer class="footer">
     <h2> <i>Be Humble</i></h2>
-    <p>I’m gonna do it</p>
+    <p>We are going to do it</p>
+    <a href="https://www.facebook.com/"><img id="icon" src="icons/facebook.svg" alt=""></a>
+    <a href="https://twitter.com/"><img id="icon" src="icons/Twitter.svg" alt=""></a>
+    <a href="https://www.instagram.com/"><img id="icon" src="icons/Instagram.png" alt=""></a>
+    <a href="https://mail.google.com/"><img id="icon" src="icons/gmail.svg" alt=""></a>
     <p>Copyright 2022 &#169; donate for life</p>
 </footer>
 
