--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
 <footer class="footer">
     <h2> <i>Be Humble</i></h2>
     <p>We are going to do it</p>
-    <a href="https://www.facebook.com/"><img id="icon" src="icons/facebook.svg" alt=""></a>
-    <a href="https://twitter.com/"><img id="icon" src="icons/Twitter.svg" alt=""></a>
-    <a href="https://www.instagram.com/"><img id="icon" src="icons/Instagram.png" alt=""></a>
-    <a href="https://mail.google.com/"><img id="icon" src="icons/gmail.svg" alt=""></a>
+    <a href="https://www.facebook.com/"><img class="link-icon" src="icons/facebook.svg" alt=""></a>
+    <a href="https://twitter.com/"><img class="link-icon" src="icons/Twitter.svg" alt=""></a>
+    <a href="https://www.instagram.com/"><img class="link-icon" src="icons/Instagram.png" alt=""></a>
+    <a href="https://mail.google.com/"><img class="link-icon" src="icons/gmail.svg" alt=""></a>
     <p>Copyright 2022 &#169; donate for life</p>
 </footer>
 
